[package]
name = "compliments-app"
version = "0.1.1"
authors = ["Josh Matthews <josh@joshmatthews.net>", "Jami Schwarzwalder <padwin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-server="0.4"
motivations = "1.1.2"
pick-one = "1.0.1"
handlebars = "2.0.1"
